--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
           <a class="navbar-brand text-primary" href="#destacados">DESTACADOS</a>
-          <a class="navbar-brand text-primary" href="#destacados">SUCURSALES</a>
+          <a class="navbar-brand text-primary" href="#section_sucursales">SUCURSALES</a>
           <a class="navbar-brand text-primary" href="#destacados">CONTACTO</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon "></span>
